--- a/TheExpanseRPG.Core/TheExpanseRPG.Core.csproj
+++ b/TheExpanseRPG.Core/TheExpanseRPG.Core.csproj
@@ -18,8 +18,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Data.Sqlite" Version="8.0.1" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="7.0.0" />
-    <PackageReference Include="System.Data.SQLite.Core" Version="1.0.118" />
   </ItemGroup>
 
   <ItemGroup>
