--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,7 +2,7 @@ name: "Deploy\\"
 on:
     push:
     tags:
-        -"v*"
+        -"expanserpg-release/v*"
 env:
     PROJECT_PATH: TheExpanseRPG/TheExpanseRPG.csproj
 jobs:
