--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,6 +10,7 @@ jobs:
         runs-on: windows-latest
         steps:
             - uses: actions/checkout@v2
+            
             - uses: actions/setup-dotnet@v1
                 with:
                     dotnet-version: net7.0-windows
@@ -17,5 +18,5 @@ jobs:
 
             -run: dotnet build ${{ env.PROJECT_PATH }} -c Release --no-restore
 
-            -run: dotnet publish ${{ env.PROJECT_PATH }} -Release -self-contained -r win:x64
+            -run: dotnet publish ${{ env.PROJECT_PATH }} -Release -self-contained -r win:x64 --no-build
 
