--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,7 +12,9 @@ jobs:
             - uses: actions/checkout@v4
             
             - uses: actions/setup-dotnet@v4
-                with: dotnet-version: 7.0.x
+              with:
+                  dotnet-version: 7.0.x
+
             -run: dotnet restore ${{ env.PROJECT_PATH }}
 
             -run: dotnet build ${{ env.PROJECT_PATH }} -c Release --no-restore
