--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,23 +1,26 @@
-name: "Deploy"
+name: "DeployRPG"
+
 on:
-    push:
+  push:
     tags:
-        -"expanserpg-release/v*"
+      - "expanserpg-release/v*"
+
 env:
-    PROJECT_PATH: TheExpanseRPG/TheExpanseRPG.csproj
+  PROJECT_PATH: TheExpanseRPG/TheExpanseRPG.csproj
+
 jobs:
-    deploy:
-        runs-on: windows-latest
-        steps:
-            - uses: actions/checkout@v4
-            
-            - uses: actions/setup-dotnet@v4
-              with:
-                  dotnet-version: 7.0.x
+  deploy:
+    runs-on: windows-latest
+    steps:
+    - uses: actions/checkout@v4
+    
+    - uses: actions/setup-dotnet@v4
+      with:
+          dotnet-version: 7.0.x
 
-            -run: dotnet restore ${{ env.PROJECT_PATH }}
+    - run: dotnet restore ${{ env.PROJECT_PATH }}
 
-            -run: dotnet build ${{ env.PROJECT_PATH }} -c Release --no-restore
+    - run: dotnet build ${{ env.PROJECT_PATH }} -c Release --no-restore
 
-            -run: dotnet publish ${{ env.PROJECT_PATH }} -Release -self-contained -r win:x64 --no-build
+    - run: dotnet publish ${{ env.PROJECT_PATH }} -Release -self-contained -r win:x64 --no-build
 
