--- a/.github/workflows/deployrpg.yml
+++ b/.github/workflows/deployrpg.yml
@@ -22,5 +22,5 @@ jobs:
 
     - run:  dotnet build ${{ env.PROJECT_PATH }} -c Release --no-restore
 
-    - run:  dotnet publish ${{ env.PROJECT_PATH }} -Release -self-contained -r win:x64 --no-build
+    - run:  dotnet publish ${{ env.PROJECT_PATH }} -c Release --self-contained -r win:x64 --no-build --no-restore
 
