--- a/.github/workflows/deployrpg.yml
+++ b/.github/workflows/deployrpg.yml
@@ -22,3 +22,14 @@ jobs:
 
     - run:  dotnet publish ${{ env.PROJECT_PATH }} -c Release --self-contained -r win-x64 --no-build --no-restore
 
+    - uses: actions/create-release@v1
+      id: create_release
+      env:
+        GITHUB_TOKEN: $"{{ secrets.GITHUB_TOKEN }}"
+      with:
+        release_name: ${{ github.ref }}
+
+    - uses: csexton/release-asset-action@v2
+        GITHUB_TOKEN: $"{{ secrets.GITHUB_TOKEN }}"
+        release-url: ${{ steps.create_release.outputs.upload_url }}
+        
