--- a/.github/workflows/deployrpg.yml
+++ b/.github/workflows/deployrpg.yml
@@ -30,6 +30,7 @@ jobs:
         release_name: ${{ github.ref }}
 
     - uses: csexton/release-asset-action@v2
+      with:
         github_token: $"{{ secrets.GITHUB_TOKEN }}"
         release-url: ${{ steps.create_release.outputs.upload_url }}
         
