--- a/.github/workflows/deployrpg.yml
+++ b/.github/workflows/deployrpg.yml
@@ -16,8 +16,8 @@ jobs:
       with:
           dotnet-version: 7.0.x
 
-    - name: restore Project
-      run: dotnet restore ${{ env.PROJECT_PATH }}
+    # - name: Restore Project
+    #   run: dotnet restore ${{ env.PROJECT_PATH }}
     
     - name: Build Project
       run: dotnet build ${{ env.PROJECT_PATH }} -c Release --no-restore --self-contained
@@ -28,13 +28,13 @@ jobs:
     - uses: actions/create-release@v1
       id: create_release
       env:
-        GITHUB_TOKEN: $"{{ secrets.GITHUB_TOKEN }}"
+        GITHUB_TOKEN: $"{{ secrets.EXPANSERPGDEPLOYMENT }}"
       with:
         tag_name: ${{ github.ref }}
         release_name: ${{ github.ref }}
 
     - uses: csexton/release-asset-action@v2
       with:
-        github_token: $"{{ secrets.GITHUB_TOKEN }}"
+        github_token: $"{{ secrets.EXPANSERPGDEPLOYMENT }}"
         release-url: ${{ steps.create_release.outputs.upload_url }}
         
