--- a/.github/workflows/deployrpg.yml
+++ b/.github/workflows/deployrpg.yml
@@ -35,6 +35,6 @@ jobs:
 
     - uses: csexton/release-asset-action@v2
       with:
-        github_token: ${{ secrets.GITHUB_TOKEN }}
+        github-token: ${{ secrets.GITHUB_TOKEN }}
         release-url: ${{ steps.create_release.outputs.upload_url }}
         
