--- a/TheExpanseRPG/TheExpanseRPG.csproj
+++ b/TheExpanseRPG/TheExpanseRPG.csproj
@@ -7,6 +7,7 @@
     <UseWPF>true</UseWPF>
     <RuntimeIdentifier>win-x64</RuntimeIdentifier>
     <PublishReadyToRunComposite>false</PublishReadyToRunComposite>
+    <ApplicationIcon>ExpRpgIcon.ico</ApplicationIcon>
     <!--<IncludeNativeLibrariesForSelfExtract>true</IncludeNativeLibrariesForSelfExtract>-->
   </PropertyGroup>
 
@@ -22,6 +23,7 @@
   </ItemGroup>
   
   <ItemGroup>
+    <Content Include="ExpRpgIcon.ico" />
     <Content Include="Images\CharacterProfiles\000_blank.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
