tests, cleanup, minor fixes (DnD fix, text coloring)

--- a/TheExpanseRPG.Core.Tests/TheExpanseRPG.Core.Tests.csproj
+++ b/TheExpanseRPG.Core.Tests/TheExpanseRPG.Core.Tests.csproj
@@ -8,6 +8,7 @@
     <IsPackable>false</IsPackable>
     <IsTestProject>true</IsTestProject>
     <RuntimeIdentifier>win-x64</RuntimeIdentifier>
+    <IsPublishable>False</IsPublishable>
   </PropertyGroup>
 
   <ItemGroup>
